# portwhy

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  eslint.config.js  package.json  pyproject.toml
.dev-factory/: inspection_report.md  pipeline-validated.md  project_profile.yml  task_template.md
.dev-factory/playbooks/: executor.md  reviewer.md
.dev-factory/prompts/: impl_system.md  intake_system.md  review_system.md  spec_system.md
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  contributing.md  roadmap.md
docs/archive/: TODO_v0.1.0.md
src/portwhy/: __main__.py
