[project]
name = "portwhy"
version = "0.0.1"
description = "Explain why a port is busy"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
portwhy = "portwhy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/"]